--- a/src/main/resources/templates/goodbye.mustache
+++ b/src/main/resources/templates/goodbye.mustache
@@ -3,7 +3,7 @@
 
 <!-- contents -->
 <div class="bg-dark text-white p-5">
-    <h1>{{nickname}}님, 또 만나요!</h1>
+    <h1>{{nickname}}님, 또 만나요!요요요요</h1>
 </div>
 
 <!-- Site info -->
